cleaned up how graph colors are used to route through styling; fixed the display of code in dark mode

--- a/src/assets/style/colors.scss
+++ b/src/assets/style/colors.scss
@@ -12,9 +12,16 @@ $color-neutral: var(--q-neutral);
 $color-background: var(--q-background);
 $color-selected: var(--q-selected);
 
-$color-added: var(--q-addedLight);
-$color-modified: var(--q-modifiedLight);
-$color-removed: var(--q-removedLight);
+$color-added: var(--q-added);
+$color-added-bg: var(--q-addedBg);
+$color-modified: var(--q-modified);
+$color-modified-bg: var(--q-modifiedBg);
+$color-removed: var(--q-removed);
+$color-removed-bg: var(--q-removedBg);
+$color-flagged: var(--q-flagged);
+$color-flagged-bg: var(--q-flaggedBg);
+
+$color-node-default: var(--q-nodeDefault);
 
 // Background Palette Tags
 
