--- a/src/assets/style/graph.scss
+++ b/src/assets/style/graph.scss
@@ -28,27 +28,52 @@ $graph-border-radius: 8px;
 // Graph Nodes
 
 .artifact-svg-wrapper {
+  // Node Border
+  .artifact-border { fill: $color-node-default; }
+  &.artifact-svg-delta-ADDED > .artifact-border { fill: $color-added; }
+  &.artifact-svg-delta-MODIFIED > .artifact-border { fill: $color-modified; }
+  &.artifact-svg-delta-REMOVED > .artifact-border { fill: $color-removed; }
+  .artifact-border.artifact-warning { fill: $color-flagged; }
+
+  // Node Background
+  .artifact-svg { fill: $color-background; }
+  &.artifact-svg-delta-ADDED > .artifact-svg { fill: $color-added-bg; }
+  &.artifact-svg-delta-MODIFIED > .artifact-svg { fill: $color-modified-bg; }
+  &.artifact-svg-delta-REMOVED > .artifact-svg { fill: $color-removed-bg; }
+  .artifact-svg.artifact-warning { fill: $color-flagged-bg; }
+
+  // Node Divider
+  .artifact-svg-div { stroke: $color-node-default; }
+  &.artifact-svg-delta-ADDED > .artifact-svg-div { stroke: $color-added; }
+  &.artifact-svg-delta-MODIFIED > .artifact-svg-div { stroke: $color-modified; }
+  &.artifact-svg-delta-REMOVED > .artifact-svg-div { stroke: $color-removed; }
+
   &.artifact-svg-delta-ADDED,
   &.artifact-svg-delta-MODIFIED,
   &.artifact-svg-delta-REMOVED {
+    // Node Text
     & > foreignObject > * {
       color: black;
     }
 
+    // Node Text Highlight
     &:hover > foreignObject > * {
       color: $color-text;
     }
   }
 
+  // Node Highlight
   &:hover > .artifact-svg {
     fill: $color-neutral;
     filter: drop-shadow(0px 2px 2px rgb(0 0 0 / 0.3));
   }
 
+    // Node Highlight Border
   &.artifact-svg-delta-NO_CHANGE:hover > .artifact-border {
     fill: $color-primary;
   }
 
+    // Node Highlight Divider
   &.artifact-svg-delta-NO_CHANGE:hover > .artifact-svg-div {
     stroke: $color-primary;
   }
